# cook-inlet-catalogs

./: .readthedocs.yml  README.md  environment.yml  setup.cfg
.github/workflows/: release.yaml
cook_inlet_catalogs/: __init__.py  generate_catalogs.py  utils.py
cook_inlet_catalogs/catalogs/: adcp_moored_noaa_coi_2005.yaml  adcp_moored_noaa_coi_other.yaml  adcp_moored_noaa_kod_1.yaml  adcp_moored_noaa_kod_2.yaml  ctd_profiles_2005_noaa.yaml  ctd_profiles_ecofoci.yaml  ctd_profiles_emap_2002.yaml  ctd_profiles_emap_2008.yaml  ctd_profiles_kachemack_kuletz_2005_2007.yaml  ctd_profiles_kb_small_mesh_2006.yaml  ctd_profiles_kbay_osu_2007.yaml  ctd_profiles_piatt_speckman_1999.yaml  ctd_profiles_usgs_boem.yaml  ctd_towed_ferry_noaa_pmel.yaml  ctd_towed_gwa.yaml  ctd_towed_gwa_temp.yaml  ctd_towed_otf_kbnerr.yaml  ctd_transects_barabara_to_bluff_2002_2003.yaml  ctd_transects_cmi_kbnerr.yaml  ctd_transects_cmi_uaf.yaml  ctd_transects_gwa.yaml  ctd_transects_misc_2002.yaml  ctd_transects_otf_kbnerr.yaml  ctd_transects_uaf.yaml  drifters_ecofoci.yaml  drifters_epscor.yaml  drifters_lake_clark.yaml  drifters_uaf.yaml  hfradar.yaml  moorings_aoos_cdip.yaml  moorings_circac.yaml  moorings_kbnerr.yaml  moorings_kbnerr_bear_cove_seldovia.yaml  moorings_kbnerr_historical.yaml  moorings_kbnerr_homer.yaml  moorings_noaa.yaml  moorings_nps.yaml  moorings_uaf.yaml
docs/: conf.py  environment.yml  index.rst  write_template_nb.py
docs/demo_notebooks/: adcp_moored_noaa_coi_2005.md  adcp_moored_noaa_coi_other.md  adcp_moored_noaa_kod_1.md  adcp_moored_noaa_kod_2.md  ctd_profiles_2005_noaa.ipynb  ctd_profiles_2005_noaa.md  ctd_profiles_ecofoci.md  ctd_profiles_emap_2002.ipynb  (+53 more)
(+1 files in other folders)
