[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = cook_inlet_catalogs/_version.py


[metadata]
name = cook_inlet_catalogs
description = Intake catalogs of datasets from Cook Inlet, AK
author = axiom-data-science
url = https://github.com/axiom-data-science/cook-inlet-catalogs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    # Dont change this one
    License :: OSI Approved :: MIT License 

## Add your email here
author_email = kristen@axds.co


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    requests
setup_requires= 
    setuptools_scm
python_requires = >=3.8
################ Up until here

[options.package_data]
# Include any *.yaml files found in the "cook_inlet_catalogs.catalogs" package:
cook_inlet_catalogs.catalogs = *.yaml

zip_safe = False
packages = find:
